--- a/src/css/header.module.css
+++ b/src/css/header.module.css
@@ -1,21 +1,46 @@
-header {
-    background-color: black;
-    padding: 1.5rem 10rem;
-    align-items: center;
-}
-.divmain{
+.header {
     display: flex;
-    flex-direction: row;
     align-items: center;
     justify-content: space-between;
+    background-color: black;
+    flex-direction: row;
+    padding-left: 10rem;
+    padding-right: 10rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
 }
-.menuleft {
+.logoescrito{
+    height: 4rem;
+}
+.secaoesquerda{
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    gap: 2rem;
+}
+.logodesenho {
+    height: 4rem;
+}
+a{
+    text-decoration: none;
+}
+.btnuser{
+    background-color: transparent;
+    cursor: pointer;
+}
+.secaodireita{
     display: flex;
     flex-direction: row;
-    justify-content: center;
     align-items: center;
     gap: 2rem;
 }
-.products{
-    font-size: 1.5rem;
+.produtos {
+    font-size: 1.2rem;
+}
+header section a span:hover {
+    transition-timing-function: ease;
+    transition-duration: 0.7s;
+    color: #FF6400;
+    border-radius: 5px;
+    cursor: pointer;
 }
