--- a/src/css/header.module.css
+++ b/src/css/header.module.css
@@ -8,6 +8,7 @@
     padding-right: 10rem;
     padding-top: 1rem;
     padding-bottom: 1rem;
+    border-bottom: 2px solid #FF6400;
 }
 .logoescrito{
     height: 4rem;
