--- a/src/css/cardplaca.module.css
+++ b/src/css/cardplaca.module.css
@@ -33,3 +33,9 @@
     background-color: #FF6400;
     cursor: pointer;
   }
+  .transitioncard:hover{
+    -webkit-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    transform: scale(1.1);
+    transition-duration: 2s;
+  }
