--- a/src/css/cardproduct.module.css
+++ b/src/css/cardproduct.module.css
@@ -39,3 +39,11 @@
     transform: scale(1.1);
     transition-duration: 2s;
   }
+  .userPhoto {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    object-fit: cover;
+    margin-right: 8px; /* Espaço entre a imagem e o nome do usuário */
+  }
+  
