--- a/src/css/login.module.css
+++ b/src/css/login.module.css
@@ -7,3 +7,10 @@
     flex-direction: column;
     justify-content: center;
 }
+.userPhoto {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    object-fit: cover;
+    margin-right: 8px;
+  }
